--- a/exercice4.html
+++ b/exercice4.html
@@ -1,5 +1,6 @@
 <html>
     <body>
+        <!-- Bouton qui nous permettra de changer le mode de la page -->
         <button id = "change" onclick = "changeMode()" style="background-color: black; color: white; padding : 5px; float: right; border-radius: 10px; border: white;">Activer le Dark Mode</button>
         <br>
         <h1 style="text-align: center;">Accueil</h1>
@@ -14,10 +15,11 @@
 
     // On créé la fonction qui va permettre à la page de changer de mode (coleur de texte et de fond) que nous avons lié au bouton créé plus haut
     function changeMode(){
-        //On récupère l'ID du bouton et le body pour changer leur style par la suite
+        // On récupère l'ID du bouton et le body pour changer leur style par la suite
         let btn = document.getElementById('change');
         let body =  document.querySelector('body');
 
+        // Si la page est en Dark Mode alors on applique les changement de style suivants 
         if (body.style.color == "white" && body.style.backgroundColor == "black"){
             body.style.color = "black";
             body.style.backgroundColor = "white";
@@ -26,6 +28,7 @@
             btn.textContent = "Activer le Dark Mode";
         }
 
+        // Sinon on applique les styles du mode Dark Mode aux éléments concernés 
         else {
             body.style.color ="white";
             body.style.backgroundColor = "black";
