--- a/exercice5.html
+++ b/exercice5.html
@@ -27,7 +27,7 @@
     // On créé la fonction qui va nous permettre d'afficher ou non le menu de la page
     function affMenu(){
         // On récupère l'ID du menu pour manipuler son affichage grace au style qu'on applique 
-        menu = document.getElementById('menu');
+        let menu = document.getElementById('menu');
 
         // Si le menu est visible alors on le fait disparaître 
         if (menu.style.display == "block"){
